--- a/src/components/home/ProfileCard.css
+++ b/src/components/home/ProfileCard.css
@@ -1,12 +1,15 @@
 .card-container {
-  background-color: white;
+  background-color: rgb(241, 255, 255);
   min-width: 350px;
   max-width: 600px;
   height: auto;
   border-radius: 14px;
-  border: solid black 2px;
-  box-shadow: 0px 5px 5px hsl(0, 0%, 40%);
+  border: solid rgb(0, 0, 0) 2px;
   margin: 20px 25px;
+}
+
+.card-container:hover {
+  box-shadow: 0px 5px 5px hsl(0, 0%, 40%);
 }
 
 header {
