--- a/src/components/home/ProfileCard.css
+++ b/src/components/home/ProfileCard.css
@@ -1,5 +1,5 @@
 .card-container {
-  background-color: rgb(241, 255, 255);
+  background-color: rgb(239, 239, 239);
   min-width: 350px;
   max-width: 600px;
   height: auto;
@@ -17,6 +17,8 @@ header {
   text-align: center;
   border-top-left-radius: 14px;
   border-top-right-radius: 14px;
+  height: 100px;
+  background-color: rgb(210, 210, 210);
 }
 
 img {
@@ -29,6 +31,7 @@ img {
 
 .bold-text {
   font-weight: bold;
+  margin-top: 60px;
   font-size: 1.3rem;
   text-align: center;
   padding: 10px 20px 0px 20px;
@@ -57,6 +60,9 @@ img {
   display: flex;
   border-top: solid rgb(206, 206, 206) 1px;
   text-align: center;
+  background-color: rgb(210, 210, 210);
+  border-bottom-left-radius: 14px;
+  border-bottom-right-radius: 14px;
 }
 
 .followers {
